--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "serverless-pseudo-parameters": "^1.6.0"
+    "serverless-pseudo-parameters": "^1.6.0",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "serverless-step-functions": "^1.25.0"
